--- a/include/view/adminconsole.phtml
+++ b/include/view/adminconsole.phtml
@@ -13,8 +13,7 @@ if(!defined('VERSION')) {
   <!-- <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1, width=device-width"> -->
   <!-- <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1" > -->
   <meta http-equiv="Content-Type" content="text/html;" />
-  <meta name="description" content="主页" />
-  <meta name="renderer" content="webkit">
+  <meta name="description" content="控制台" />
   <title><?php echo $this->view['title'] ?></title>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <!-- jQuery文件-->
@@ -25,7 +24,6 @@ if(!defined('VERSION')) {
   <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="/css/header-footer.css" />
   <link rel="stylesheet" type="text/css" href="/css/index.css" />
-  <script type="text/javascript" src="/js/index.js"></script>
   <script type="text/javascript" src="/js/header-footer.js"></script>
 </head>
 <body>
