--- a/include/view/login.phtml
+++ b/include/view/login.phtml
@@ -4,3 +4,74 @@ if(!defined('VERSION')) {
   exit();
 }
 ?>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta  charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <!-- <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1, width=device-width"> -->
+  <!-- <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1" > -->
+  <meta http-equiv="Content-Type" content="text/html;" />
+  <meta name="description" content="主页" />
+  <meta name="renderer" content="webkit">
+  <title><?php echo $this->view['title'] ?></title>
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <!-- jQuery文件-->
+  <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+  <!-- 新 Bootstrap 核心 CSS 文件 -->
+  <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+  <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="/css/header-footer.css" />
+  <link rel="stylesheet" type="text/css" href="/css/register.css" />
+  <script type="text/javascript" src="/js/index.js"></script>
+  <script type="text/javascript" src="/js/header-footer.js"></script>
+</head>
+<body>
+  <?php include $this->view['header']; ?>
+  <div class="container register-wrapper">
+    <form class="form-horizontal">
+      <div class="form-group">
+        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+        <div class="col-sm-10">
+          <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+        <div class="col-sm-10">
+          <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <div class="checkbox">
+            <label>
+              <input type="checkbox"> Remember me
+            </label>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <button type="submit" class="btn btn-default">Sign in</button>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="container-fluid">
+    <?php if(DEBUG_MODE):?>
+    <div class="alert alert-warning">
+      <p class="text-left">该网站还有很多东西没有完工！<br /></p>
+    </div>  
+    <?php endif;?>
+    <div class="bgm">
+      <audio src="/static/music/inuyasha_bgm.mp3" controls="controls" autoplay="autoplay" loop="loop">
+        您的浏览器不支持 audio 标签。
+      </audio>
+    </div>
+  </div>
+  <?php include $this->view['footer']; ?> 
+</body>
+</html>
