--- a/include/view/err.phtml
+++ b/include/view/err.phtml
@@ -19,6 +19,7 @@ if(!defined('VERSION'))
   <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="/css/header-footer.css" />
   <link rel="stylesheet" type="text/css" href="/css/err.css" />
+  <script src="/js/header-footer.js"></script>
   <title>
     <?php  $this->err_title_output(); ?>  
   </title>
