--- a/include/view/index.phtml
+++ b/include/view/index.phtml
@@ -101,7 +101,7 @@ if(!defined('VERSION')) {
   </div> 
   <div class="container-fluid">
     <div class="bgm">
-      <audio src="/static/music/inuyasha_bgm.mp3" controls="controls" autoplay="autoplay" loop="loop">
+      <audio src="/static/music/inuyasha_bgm.mp3" controls="controls"  loop="loop">
         您的浏览器不支持 audio 标签。
       </audio>
     </div>
