--- a/include/view/header.phtml
+++ b/include/view/header.phtml
@@ -19,19 +19,26 @@ if(!defined('VERSION')) {
         <!-- <span class="title" >个人主页</span> -->
           <div class="navbar-right">
             <div class="btn-group navbar-btn-group btn-group-lg" role="group">
-              <button type="button" class="btn btn-primary" onclick="redirect('<?php echo Base::get_url_path("Login") ?>')">
-                <?php echo $this->view['login']; ?>
-              </button>
-              <button type="button" class="btn btn-primary" onclick="redirect('<?php echo Base::get_url_path("Register") ?>')"> 
-                <?php echo $this->view['reg']; ?> 
-              </button>
-            <?php if(DEBUG_MODE): ?>
-              <a href="<?php echo Base::get_url_path("AdminConsole"); ?>" type="button" class="btn btn-primary" role="buttun"><?php echo "console"; ?></a>
-            <?php endif; ?>
+              <?php if(!Users::is_logged_in()): ?>
+                <!-- login or register button -->
+                <button type="button" class="btn btn-primary" onclick="redirect('<?php echo Base::get_url_path("Login") ?>')">
+                  <?php echo $this->view['login']; ?>
+                </button>
+                <button type="button" class="btn btn-primary" onclick="redirect('<?php echo Base::get_url_path("Register") ?>')"> 
+                  <?php echo $this->view['reg']; ?> 
+                </button>
+              <?php else: ?>
+                <button type="button" class="btn btn-primary" onclick="redirect('<?php echo Base::get_url_path("Login") ?>')">
+                  <?php echo $this->view['logout']; ?>
+                </button>
+              <?php endif ?>
+              <?php if(Users::is_manager()): ?>
+                <a href="<?php echo Base::get_url_path("AdminConsole"); ?>" type="button" class="btn btn-primary" role="buttun"><?php echo "console"; ?></a>
+              <?php endif; ?>
             </div>
           </div>
           <a href="#" class="navbar-right">
-            <img class="img-circle avatar" src="<?php echo $this->view['avatar']; ?>" alt="avatar">
+            <img class="img-circle avatar" src="<?php echo $this->view['avatar']; ?>" alt="avatar <?php echo ' of '.Users::get_logged_in_user_field('name') ?>">
           </a>
         </div>
       </div>
