--- a/include/view/login.phtml
+++ b/include/view/login.phtml
@@ -24,50 +24,50 @@ if(!defined('VERSION')) {
   <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
   <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="/css/header-footer.css" />
-  <link rel="stylesheet" type="text/css" href="/css/register.css" />
-  <script type="text/javascript" src="/js/index.js"></script>
+  <link rel="stylesheet" type="text/css" href="/css/login.css" />
+  <script type="text/javascript" src="/js/login.js"></script>
   <script type="text/javascript" src="/js/header-footer.js"></script>
 </head>
 <body>
   <?php include $this->view['header']; ?>
   <div class="container register-wrapper">
-    <form class="form-horizontal">
+    <form class="form-horizontal" method="post" action="<?php echo Base::get_url_path('Login') ?>">
+      <div class="form-group "></div>
       <div class="form-group">
-        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-        <div class="col-sm-10">
-          <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+        <label for="inputEmail3" class="col-sm-3 control-label">Email or Name</label>
+        <div class="col-sm-4 col-sm-offset-1">
+          <input type="text" class="form-control" id="inputEmail3" name="handle" placeholder="Email or Name">
         </div>
       </div>
       <div class="form-group">
-        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-        <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+        <label for="inputPassword3" class="col-sm-3 control-label">Password</label>
+        <div class="col-sm-4 col-sm-offset-1">
+          <input type="password" class="form-control" id="inputPassword3" name="passwd" placeholder="Password">
         </div>
       </div>
       <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
+        <div class="col-sm-offset-4 col-sm-10">
           <div class="checkbox">
             <label>
-              <input type="checkbox"> Remember me
+              <input type="checkbox" name="remember"> Remember me
             </label>
           </div>
         </div>
       </div>
+      <div class="form-group"><div class="col-sm-4 col-sm-offset-4" id="error-info"><p class="text-danger"><?php echo @$this->view['error'] ?></p></div></div>
       <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-default">Sign in</button>
+        <div class="col-sm-offset-4 col-sm-10">
+          <button type="submit" class="btn btn-primary">Sign in</button>
         </div>
+      </div>
+      <div class="form-group form-group-hidden">
+        <input type="text" name="code" value="<?php echo $this->view['secure_code']; ?>">
       </div>
     </form>
   </div>
   <div class="container-fluid">
-    <?php if(DEBUG_MODE):?>
-    <div class="alert alert-warning">
-      <p class="text-left">该网站还有很多东西没有完工！<br /></p>
-    </div>  
-    <?php endif;?>
     <div class="bgm">
-      <audio src="/static/music/inuyasha_bgm.mp3" controls="controls" autoplay="autoplay" loop="loop">
+      <audio src="/static/music/inuyasha_bgm.mp3" controls="controls" loop="loop">
         您的浏览器不支持 audio 标签。
       </audio>
     </div>
