--- a/include/view/adminconsole.phtml
+++ b/include/view/adminconsole.phtml
@@ -67,10 +67,7 @@ if(!defined('VERSION')) {
     </table>
   </div>
   <div>
-   <!--  <?php foreach ($this->view['users'] as $key => $value): ?>
-      <?php echo $key.' ===> '.$value; ?><br>
-    <?php endforeach ?> -->
-    <!-- <?php echo $this->view['updateusers'] ?> -->
+  <!-- <?php echo $this->view['test'] ?>  -->
   </div>
   <?php include $this->view['footer']; ?> 
 </body>
