--- a/include/view/register.phtml
+++ b/include/view/register.phtml
@@ -62,7 +62,7 @@ if(!defined('VERSION')) {
         </div>
       </div>
       <div class="form-group form-group-hidden">
-        <input type="text" name="code" value="<?php echo $this->view['secure_code']; ?>">
+        <input type="hidden" name="code" value="<?php echo $this->view['secure_code']; ?>">
       </div>
     </form>
   </div>
