--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -70,12 +70,12 @@ div.head-mask {
 #footer {
   bottom: -40px;
   width: 100%;
-  background-color: rgb(240,240,240);
+  background-color: rgb(180,180,210);
   padding: 15px 0 15px;
 }
 #footer div.thx p{
   margin-left: 10px;
-  font-size: 70%;
+  font-size: 24px;
 }
 #footer div.thx img{
   max-height: 60px;
