--- a/include/view/footer-thank.phtml
+++ b/include/view/footer-thank.phtml
@@ -8,7 +8,7 @@ if(!defined('VERSION')) {
   <div class="thx">
         <p class="text-center text-muted">感谢hostinger <a href="http://www.hostinger.com.hk/"><img alt="hostinger的logo" src="/static/img/hostinger-logo-cn.png" /></a> 提供的免费空间</p>
         <p class="text-center text-muted">很多代码都是参考 <a href="http://www.w3school.com.cn">W3SCHOOL</a>上 给出的，当然还有很多博客上的代码</p>
-        <p class="text-center text-primary ">最近正在看 <a href="http://php.net/">php.net</a> 上手册的相关代码</p>
+        <p class="text-center text-muted">最近正在看 <a href="http://php.net/">php.net</a> 上手册的相关代码</p>
         <p class="text-center text-muted">最近正在看 <a href="#">http://v3.bootcss.com</a>  的东西，确实很好用。</p>
         <p class="text-center text-muted">有了自己的域名和空间，感觉还是挺不错的呢(•̀ᴗ•́)و ̑̑ </p>
         <p class="text-center text-muted">这是我在hostinger的推广连接 <a href="http://api.hostinger.com.hk/redir/15909018">http://api.hostinger.com.hk/redir/15909018</a> </p>
